@@ -57,19 +57,6 @@ name|lucene
 operator|.
 name|search
 operator|.
-name|DocIdSet
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
 name|DocIdSetIterator
 import|;
 end_import
@@ -83,7 +70,7 @@ name|lucene
 operator|.
 name|search
 operator|.
-name|Filter
+name|IndexSearcher
 import|;
 end_import
 begin_import
@@ -96,7 +83,7 @@ name|lucene
 operator|.
 name|search
 operator|.
-name|QueryWrapperFilter
+name|Query
 import|;
 end_import
 begin_import
@@ -110,6 +97,19 @@ operator|.
 name|search
 operator|.
 name|TermRangeQuery
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|Weight
 import|;
 end_import
 begin_import
@@ -178,7 +178,7 @@ name|IOUtils
 import|;
 end_import
 begin_comment
-comment|/**  * Split an index based on a {@link Filter}.  */
+comment|/**  * Split an index based on a {@link Query}.  */
 end_comment
 begin_class
 DECL|class|PKIndexSplitter
@@ -189,7 +189,7 @@ block|{
 DECL|field|docsInFirstIndex
 specifier|private
 specifier|final
-name|Filter
+name|Query
 name|docsInFirstIndex
 decl_stmt|;
 DECL|field|input
@@ -222,7 +222,7 @@ specifier|final
 name|IndexWriterConfig
 name|config2
 decl_stmt|;
-comment|/**    * Split an index based on a {@link Filter}. All documents that match the filter    * are sent to dir1, remaining ones to dir2.    */
+comment|/**    * Split an index based on a {@link Query}. All documents that match the query    * are sent to dir1, remaining ones to dir2.    */
 DECL|method|PKIndexSplitter
 specifier|public
 name|PKIndexSplitter
@@ -236,7 +236,7 @@ parameter_list|,
 name|Directory
 name|dir2
 parameter_list|,
-name|Filter
+name|Query
 name|docsInFirstIndex
 parameter_list|)
 block|{
@@ -293,7 +293,7 @@ parameter_list|,
 name|Directory
 name|dir2
 parameter_list|,
-name|Filter
+name|Query
 name|docsInFirstIndex
 parameter_list|,
 name|IndexWriterConfig
@@ -367,9 +367,6 @@ argument_list|,
 name|dir2
 argument_list|,
 operator|new
-name|QueryWrapperFilter
-argument_list|(
-operator|new
 name|TermRangeQuery
 argument_list|(
 name|midTerm
@@ -387,7 +384,6 @@ argument_list|,
 literal|true
 argument_list|,
 literal|false
-argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -424,9 +420,6 @@ argument_list|,
 name|dir2
 argument_list|,
 operator|new
-name|QueryWrapperFilter
-argument_list|(
-operator|new
 name|TermRangeQuery
 argument_list|(
 name|midTerm
@@ -444,7 +437,6 @@ argument_list|,
 literal|true
 argument_list|,
 literal|false
-argument_list|)
 argument_list|)
 argument_list|,
 name|config1
@@ -551,7 +543,7 @@ parameter_list|,
 name|DirectoryReader
 name|reader
 parameter_list|,
-name|Filter
+name|Query
 name|preserveFilter
 parameter_list|,
 name|boolean
@@ -579,6 +571,43 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
+specifier|final
+name|IndexSearcher
+name|searcher
+init|=
+operator|new
+name|IndexSearcher
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+name|searcher
+operator|.
+name|setQueryCache
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+specifier|final
+name|boolean
+name|needsScores
+init|=
+literal|false
+decl_stmt|;
+comment|// scores are not needed, only matching docs
+specifier|final
+name|Weight
+name|preserveWeight
+init|=
+name|searcher
+operator|.
+name|createNormalizedWeight
+argument_list|(
+name|preserveFilter
+argument_list|,
+name|needsScores
+argument_list|)
+decl_stmt|;
 specifier|final
 name|List
 argument_list|<
@@ -630,7 +659,7 @@ name|DocumentFilteredLeafIndexReader
 argument_list|(
 name|ctx
 argument_list|,
-name|preserveFilter
+name|preserveWeight
 argument_list|,
 name|negateFilter
 argument_list|)
@@ -698,8 +727,8 @@ parameter_list|(
 name|LeafReaderContext
 name|context
 parameter_list|,
-name|Filter
-name|preserveFilter
+name|Weight
+name|preserveWeight
 parameter_list|,
 name|boolean
 name|negateFilter
@@ -740,37 +769,19 @@ argument_list|)
 decl_stmt|;
 comment|// ignore livedocs here, as we filter them later:
 specifier|final
-name|DocIdSet
-name|docs
+name|DocIdSetIterator
+name|preserveIt
 init|=
-name|preserveFilter
+name|preserveWeight
 operator|.
-name|getDocIdSet
+name|scorer
 argument_list|(
 name|context
-argument_list|,
-literal|null
 argument_list|)
 decl_stmt|;
 if|if
 condition|(
-name|docs
-operator|!=
-literal|null
-condition|)
-block|{
-specifier|final
-name|DocIdSetIterator
-name|it
-init|=
-name|docs
-operator|.
-name|iterator
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|it
+name|preserveIt
 operator|!=
 literal|null
 condition|)
@@ -779,10 +790,9 @@ name|bits
 operator|.
 name|or
 argument_list|(
-name|it
+name|preserveIt
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 if|if
 condition|(
@@ -845,8 +855,10 @@ name|nextDoc
 argument_list|()
 init|;
 name|i
-operator|<
-name|maxDoc
+operator|!=
+name|DocIdSetIterator
+operator|.
+name|NO_MORE_DOCS
 condition|;
 name|i
 operator|=
